Regression: Group Input/Output cannot connect to some custom sockets #94827

Closed
opened 2022-01-11 20:09:17 +01:00 by Joseph Brandenburg · 13 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: 2.97.7 hash fb762eedbe or earlier (haven't bisected it), Blender 3.0
Worked: (optional) 2.93.6 Release hash : c842a90e2f

Caused by a5c59fb90e

Short description of error
Group Input/ Output nodes cannot connect to some sockets. This doesn't seem to affect built-in types. It doesn't seem to affect every kind of custom socket, either, although I can't find any pattern in what works and doesn't.
The addon Sorcar is affected by this bug. So is my (not yet released) addon.
To make it clear: This worked in past Blenders. It broke sometime between 2.97.6 and 2.97.7. It is broken in 3.0.
May be related somehow to #75959

Exact steps for others to reproduce the error
From this .blend file:
nodes_bug_minimal_example.blend
Try to make a group with Ctrl-G

In versions affected by the bug, the group creation operator will fail when trying to connect a socket to the Group Node, which should get a new input/output for each socket connected to its Group-Input and Group-Output nodes, respectively. However, some sockets can't connect, and this fails without raising an error, so there are no sockets in the Group Node to connect to, which actually does raise an error -- these are both calls to the same Python function. One fails silently, due to this bug.
Anyhow, after the error occurs in making the node group, try and manually connect the nodes to the custom socket, then to the ordinary sockets.
To be clear: The Python script in the .blend file is a demonstration of the bug as it occurs out in the wild... I'm not asking for help fixing the Python script!

I think this may be a regression bug.

**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.97.7 hash fb762eedbe85 or earlier (haven't bisected it), Blender 3.0 Worked: (optional) 2.93.6 Release hash : c842a90e2fa1 Caused by a5c59fb90e **Short description of error** Group Input/ Output nodes cannot connect to some sockets. This doesn't seem to affect built-in types. It doesn't seem to affect every kind of custom socket, either, although I can't find any pattern in what works and doesn't. The addon Sorcar is affected by this bug. So is my (not yet released) addon. To make it clear: This **worked** in past Blenders. It broke sometime between 2.97.6 and 2.97.7. It is broken in 3.0. May be related somehow to #75959 **Exact steps for others to reproduce the error** From this .blend file: [nodes_bug_minimal_example.blend](https://archive.blender.org/developer/F12801458/nodes_bug_minimal_example.blend) Try to make a group with Ctrl-G In versions affected by the bug, the group creation operator will fail when trying to connect a socket to the Group Node, which should get a new input/output for each socket connected to its Group-Input and Group-Output nodes, respectively. However, some sockets can't connect, and this fails **without raising an error**, so there are no sockets in the Group Node to connect to, which actually does raise an error -- these are both calls to the same Python function. One fails silently, due to this bug. Anyhow, after the error occurs in making the node group, try and manually connect the nodes to the custom socket, then to the ordinary sockets. To be clear: The Python script in the .blend file is a demonstration of the bug as it occurs out in the wild... I'm not asking for help fixing the Python script! I think this may be a regression bug.

Added subscriber: @Josephbburg

Added subscriber: @Josephbburg
Member

Added subscriber: @Imaginer

Added subscriber: @Imaginer
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm (sorry this ended up in LTS), will check how that broke...

Can confirm (sorry this ended up in LTS), will check how that broke...
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Caused by a5c59fb90e

CC @Jeroen-Bakker

Caused by a5c59fb90e CC @Jeroen-Bakker
Philipp Oeser changed title from Group Input/Output cannot connect to some sockets in Blender 3.0 to Regression: Group Input/Output cannot connect to some custom sockets 2022-01-12 15:50:08 +01:00
Member

Added subscribers: @HooglyBoogly, @JacquesLucke

Added subscribers: @HooglyBoogly, @JacquesLucke
Member

Seems like the Group Input sockets happen to be of type SOCK_CUSTOM as well [ and since a5c59fb90e custom py defined sockets are too :) ]

There is a check introduced in 513066e8ad that prevents connections for SOCK_CUSTOM...

Removing the check fixes the issue, but of course brings #39849 back.

Maybe we need a new socket type for group inputs/outputs?

CC @JacquesLucke
CC @HooglyBoogly

Seems like the Group Input sockets happen to be of type `SOCK_CUSTOM` as well [ and since a5c59fb90e custom py defined sockets are too :) ] There is a check introduced in 513066e8ad that prevents connections for `SOCK_CUSTOM`... Removing the check fixes the issue, but of course brings #39849 back. Maybe we need a new socket type for group inputs/outputs? CC @JacquesLucke CC @HooglyBoogly
Philipp Oeser self-assigned this 2022-01-12 16:13:15 +01:00
Member

Actually, I think we can just additionally check the node type, will do

Actually, I think we can just additionally check the node type, will do

This issue was referenced by 688713db24

This issue was referenced by 688713db24b1777fac516cb573a9dba8200e51b5

This issue was referenced by 85df7036f7

This issue was referenced by 85df7036f76b87102466079cc46c2bbfb9b17d9c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94827
No description provided.